compiler/tests/success/otbn/intrinsic_srl.jazz
export
fn srl(reg u32 arg0 arg1) {
    reg u32 x;
    x = #SRL(arg0, arg1);
    [x] = x;
}
